welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:11: error: '<-' expected but ')' found.
for (nbPas< 0 to 8) { 
                  ^Runner:18: error: illegal start of simple expression
	}
        ^