welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var tour=0
var nbPas=0
while (!estFaceMur) {
	avance()
	nbPas= nbPas + 1
}
while(estFaceMur) { 
	gauche()
}
for (nbPas< 0 to 8) { 
	avance()
}


